# lovelaice

./: .dockerignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
docs/: 2026-07-02-precise-tool-calling-design.md  2026-07-02-precise-tool-calling-plan.md  2026-07-03-retire-old-agent-path-design.md  2026-07-10-acp-v1-and-native-toolset.md
know-how/: acp-v1-server.md
scripts/: smoke_repair_hard.py  smoke_toolcalls.py
src/lovelaice/: __init__.py  cli.py  mcp.py
src/lovelaice/acp/: __main__.py  client.py  protocol.py  server.py
src/lovelaice/acp/v1/: __main__.py  server.py
src/lovelaice/agent/: __init__.py  agent.py  conversation.py  conversation_models.py  errors.py  events.py  harness.py  hooks.py  prompt.py  session.py  tools.py
src/lovelaice/agent/loops/: __init__.py  react_native.py
src/lovelaice/coding/: hooks.py  host.py
src/lovelaice/coding/tools/: bash.py  edit.py  glob.py  list_dir.py  read.py  write.py
src/lovelaice/workflows/: __init__.py  executor.py  models.py
tests/: conftest.py  test_cli_e2e.py  test_coding_host_extra_tools.py  test_live_e2e.py  test_mcp.py  test_mcp_http.py  test_mcp_http_live.py  test_workspace_grounding.py
tests/acp/: test_protocol.py  test_server.py  test_wire_shape.py  test_workflow_prompt.py  test_workflow_run.py
tests/acp/v1/: test_server_v1.py  test_v1_stdio_live.py
tests/agent/: test_agent.py  test_conversation.py  test_events.py  test_harness_execute_tool.py  test_harness_llm_call.py  test_hooks.py  test_prompt.py  test_react_native.py  test_repair.py  test_session.py  test_streaming_delta.py  test_tools.py
tests/cli/: test_cli_one_shot.py
tests/coding/: test_bash.py  test_full_toolset.py  test_guards.py  test_read.py
tests/mcp/: test_managed_session.py
tests/workflows/: test_entrypoint.py  test_executor.py  test_fanout.py  test_models.py  test_prompt_node.py  test_tool_node.py
