[project]
name = "lovelaice"
version = "2.10.0"
description = "A local-first coding agent for the terminal, built on a native tool-calling ReAct engine."
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.13"
dependencies = [
    "lingo-ai>=2.1.0",
    "beaver-db>=2.0rc3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "mcp>=1.2",
    "agent-client-protocol>=0.10,<1",
    "httpx>=0.28",
    "markdownify>=0.13",
    "readabilipy>=0.3",
    "pathspec>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.uv.sources]
beaver-db = { path = "../beaver", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lovelaice = "lovelaice.cli:app"
lovelaice-acp = "lovelaice.acp.v1.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
